err/sms-logistics.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/logistics'...
Listing './lib/python3.5/site-packages/logistics/apps'...
Listing './lib/python3.5/site-packages/logistics/apps/logistics'...
Compiling './lib/python3.5/site-packages/logistics/apps/logistics/app.py'...
***   File "./lib/python3.5/site-packages/logistics/apps/logistics/app.py", line 73
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/logistics/apps/logistics/extensions'...
Listing './lib/python3.5/site-packages/logistics/apps/logistics/extensions/locations'...
Listing './lib/python3.5/site-packages/logistics/apps/logistics/extensions/rapidsms'...
Listing './lib/python3.5/site-packages/logistics/apps/logistics/fixtures'...
Listing './lib/python3.5/site-packages/logistics/apps/logistics/handlers'...
Listing './lib/python3.5/site-packages/logistics/apps/logistics/locale'...
Listing './lib/python3.5/site-packages/logistics/apps/logistics/locale/en'...
Listing './lib/python3.5/site-packages/logistics/apps/logistics/locale/en/LC_MESSAGES'...
Compiling './lib/python3.5/site-packages/logistics/apps/logistics/models.py'...
***   File "./lib/python3.5/site-packages/logistics/apps/logistics/models.py", line 406
    except ValueError, e:
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/logistics/apps/logistics/static'...
Listing './lib/python3.5/site-packages/logistics/apps/logistics/static/images'...
Listing './lib/python3.5/site-packages/logistics/apps/logistics/static/javascripts'...
Listing './lib/python3.5/site-packages/logistics/apps/logistics/static/stylesheets'...
Listing './lib/python3.5/site-packages/logistics/apps/logistics/templates'...
Listing './lib/python3.5/site-packages/logistics/apps/logistics/templates/logistics'...
Listing './lib/python3.5/site-packages/logistics/apps/logistics/templates/logistics/partials'...
Listing './lib/python3.5/site-packages/logistics/apps/logistics/tests'...
Compiling './lib/python3.5/site-packages/logistics/apps/logistics/views.py'...
***   File "./lib/python3.5/site-packages/logistics/apps/logistics/views.py", line 47
    except ValueError, e:
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/logistics/apps/registration'...
Listing './lib/python3.5/site-packages/logistics/apps/registration/handlers'...
Listing './lib/python3.5/site-packages/logistics/apps/registration/static'...
Listing './lib/python3.5/site-packages/logistics/apps/registration/static/stylesheets'...
Listing './lib/python3.5/site-packages/logistics/apps/registration/templates'...
Listing './lib/python3.5/site-packages/logistics/apps/registration/templates/registration'...
Compiling './lib/python3.5/site-packages/logistics/bootstrap_db.py'...
***   File "./lib/python3.5/site-packages/logistics/bootstrap_db.py", line 26
    print "Loaded products into %(fac)s" % {'fac':fac.name}
                                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/sms_logistics-0.0.1.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
